--- a/app/src/main/res/layout/item_country_row.xml
+++ b/app/src/main/res/layout/item_country_row.xml
@@ -13,6 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/item_country_cell_row_spacing"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/text_country_code"
         app:layout_constraintTop_toTopOf="parent"
