--- a/app/src/main/res/layout/fragment_countries.xml
+++ b/app/src/main/res/layout/fragment_countries.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:text="@string/error_retry"
             android:visibility="@{viewModel.errorVisible ? View.VISIBLE : View.GONE}"
+            android:onClick="@{() -> viewModel.refetchCountries()}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_error_message"
